--- a/apps/user-app/package.json
+++ b/apps/user-app/package.json
@@ -9,17 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@repo/store": "*",
     "@radix-ui/react-slot": "^1.2.0",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
+    "next-auth": "^4.24.11",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recoil": "^0.7.7",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
+    "@repo/store": "*",
+    "@repo/ui": "*",
+    "@repo/db": "*",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.5",
     "@types/node": "^20",
