--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,18 +1,13 @@
 {
   "name": "@repo/db",
   "version": "0.0.0",
-  "main": "index.js",
+  "dependencies": {
+    "@prisma/client": "^6.7.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.7.0"
+  },
   "exports": {
     "./client": "./src/index.ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "devDependencies": {
-    "prisma": "6.7.0"
-  },
-  "dependencies": {
-    "@prisma/client": "6.7.0"
   }
 }
